# kargov

./: .gitignore  README.md  TASK_kvtuber_live_demo.md  pyproject.toml
app/: __init__.py  agent_run.py  chrome.py  cli.py  config.py  export.py  narrate.py  page_capture.py  recorder.py  recorder_av.py  summarize.py
compositions/kfreqai_founder_intro/: DESIGN.md  SCRIPT.md  index.html  package.json
compositions/kfreqai_promo/: DESIGN.md  hyperframes.json  index.html
docs/: kvtuber-live-demo-success.md
kargov/: cli.py  export.py  narrate.py  recorder.py  scenes.py  script_llm.py
scripts/: capture_long_pages.py  register_kargov_video_to_kurage.py
